<resources>
    <string name="app_name">Jokar</string>
    <string name="google_map_api_key">AIzaSyBm6eN8n8A3tzhp-RYKwDZhHw3IfJ36BNA</string>
    <string name="whichservice">Which Service you want?</string>
    <string name="provide_service">Provide Service</string>
    <string name="require_service">Require Service</string>
    <string name="select_service">Select your service</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="professional_worker">Professional Worker</string>
    <string name="cancel">Cancel</string>
    <string name="signInNow">SignIn Now</string>
    <string name="signup_now">SignUp Now</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="select_your_birth_year">Select Your Birth Year</string>
    <string name="email_address">Email Address</string>
    <string name="select_your_Country">Select Your Country</string>
    <string name="select_app_language">Select App Language</string>
    <string name="select_speak_language">Select Speak Language</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_nihar_welcome_to_jokar_family">Hello, Nihar Welcome to\nJokar Family!</string>
    <string name="please_enter_one_time_security_code_sent_on_your_register_phone_number">Please enter one time security code sent\non your registered phone number</string>
    <string name="i_didn_t_receive_a_code">I didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="customer_service_admin">Customer Service Admin</string>
    <string name="captain_assistant_admin">Captain Assistant Admin</string>
    <string name="bank_account_admin">Bank Account Admin</string>
    <string name="edit">Edit</string>
    <string name="your_country">Your Country</string>
    <string name="my_caption_profile">My Caption Profile</string>
    <string name="my_rate">My Rate</string>
    <string name="mobile_number_update_successfully">Mobile Number Update\nSuccessfully!</string>
    <string name="skip">Skip</string>
    <string name="i_accept">I accept</string>
    <string name="i_agree">I agree to </string>
    <string name="terms_con">" "<u>Terms &amp; Conditions</u></string>
    <string name="terms_con1">" "Terms &amp; Conditions</string>
    <string name="terms_condition_and">" "<b><u>Terms &amp; Conditions</u></b> and </string>
    <string name="privacy_policy">" "<b><u>Privacy Policy</u></b></string>
    <string name="pricy_policy">Privacy Policy</string>
    <string name="terms_conditions_and_privacy_policy"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="more">More</string>
    <string name="manage_delivery_worker">Manage Delivery \nWorker</string>
    <string name="manage_professional_worker">Manage Professional \nWorker</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_order">My Order\'s Dashboard</string>
    <string name="nav_wallet">My wallet/Passbook</string>
    <string name="nav_address">Address History</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_delivry_person">Become Delivery Person</string>
    <string name="nav_profsnal_wrkr">Become Professional Worker</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_arabic">Arabic</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_share_earn">Share App &amp; Earn</string>
    <string name="nav_contact_admin">Contact Admin</string>
    <string name="nav_follow_us">Follow Us</string>
    <string name="order_track">Active Order Tracking</string>
    <string name="add_card">Add Card</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="save">Save</string>
    <string name="view_all_offers">View all offers</string>
    <string name="add_money">Add Money</string>
    <string name="pay_your_credit">Pay Your Credit</string>
    <string name="bank_bank_to_bank_transfer">Bank to Bank Transfer(Our Bank A/C)</string>
    <string name="available_balance">Available Balance :</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_new_bank">Add New Bank</string>
    <string name="my_bank_details">My Bank Details</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="holder_account_number">Holder Account Number</string>
    <string name="iban_number">IBAN Number</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_bank">Add Bank</string>
    <string name="my_wallet_history">My Wallet History</string>
    <string name="bank_to_bank_transfer">Bank T0 Bank Transfer(Our Bank A/C)</string>
    <string name="saudi">Saudi</string>
    <string name="our_name">Our Name</string>
    <string name="our_account_number">Our Account Number</string>
    <string name="my_wallet_passbook">My Wallet/Passbook</string>
    <string name="view_orders_details">View Orders Details</string>
    <string name="manage_my_cards_and_my_bank">Manage My Cards</string>
    <string name="pay_your_credit_our_bank_account">Pay Your Credit</string>
    <string name="normal_user">Normal User</string>
    <string name="delivery_worker">Delivery Worker</string>
    <string name="pro_worker">Pro. Worker</string>
    <string name="filter_transaction">Filter Transaction</string>
    <string name="all_added">All Added</string>
    <string name="all_paid">All Paid</string>
    <string name="month_filter">Month Filter</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="money_added_successfully">Money Added Successfully</string>
    <string name="ok">Ok</string>
    <string name="manager_card">Manage Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="total_amount_to_be_added">Total Amount to be added</string>
    <string name="pay_now">Pay Now</string>
    <string name="other_saved_cards">Other Saved Cards</string>
    <string name="professional">Professional</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="total_rating">Total Rating</string>
    <string name="rating_25">(25 Ratings)</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_type_setting_industry">Lorem Ipsum is simply dummy text of the printing and type setting industry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_ID_txt">You must upload one personal image and Two government Official ID. (National ID, Passport ID, Driving License)</string>
    <string name="upload_verified_icon"><u>Upload your own image to get Verified icon</u></string>
    <string name="order_id">Order ID :</string>
    <string name="profilr_name">MD.Abdul</string>
    <string name="rating_view_all">(25 Ratings View all)</string>
    <string name="optional">Optional</string>
    <string name="my_location">My\nLocation</string>
    <string name="your_location">Your\nLocation</string>
    <string name="order_detail">Order Details</string>
    <string name="minimum_offer">Minimum Offer 10+*</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="enter_message_if_any">Enter message if any</string>
    <string name="add_approx_time_for_complete_work">Add Approx. time for complete work</string>
    <string name="tap_plumber_any_kind_of_them">Tap Plumber,any kind of tap</string>
    <string name="professional_tap_plumber">Professional Tap Plumber</string>
    <string name="lorem_ipsum_is_simply">Lorem Ipsum is simply dummy text of the printing and type setting industry.Lorem Ipsum has been the the industry standerd dummy text ever since the 1500s</string>
    <string name="my_profile">My Profile</string>
    <string name="caption_profile">My Caption Profile</string>
    <string name="change_language">Change Language</string>
    <string name="manage_address">Manage Addresses</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="my_order_dashboard">My Order\'s Dashboard</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="become_delivery_person">Become A Delivery Person</string>
    <string name="become_prfslnal_wrkr">Become Professional Worker</string>
    <string name="dashboard_normal_user">I\'m Normal User</string>
    <string name="dashboard_delivery_worker">I\'m Delivery Worker</string>
    <string name="dashboard_professional_worker">I\'m Professional Worker</string>
    <string name="item_name1">Item Name 1-15.00</string>
    <string name="item_name2">Item Name 2-15.00</string>
    <string name="offer_amount">Offer Amount</string>
    <string name="msg">Message</string>
    <string name="work_completion_time">Delivery Time</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="delivery_offer">Delivery Offer</string>
    <string name="delivery_offer1">Delivery Charge Offer</string>
    <string name="tax">Tax 5%</string>
    <string name="total">Total</string>
    <string name="work_done">Work Done</string>
    <string name="make_new_offer">Make New \nOffer</string>
    <string name="report_cancel_order">Cancel Order</string>
    <string name="cancellation">Cancellation</string>
    <string name="address_detail">Address Details</string>
    <string name="service_location">Service Location</string>
    <string name="credit_use_ur_wallet">Credit use from your wallet for this order</string>
    <string name="tax_you_received_from_user_by_cash_5">Tax you received from user by\ncash 5%</string>
    <string name="account_balance">Account Balance</string>
    <string name="total_bills_paid">Total Bills Paid</string>
    <string name="order_count">Order Count</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    \n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word.</string>
    <string name="offer_submit_success">Offer Submit Successfully</string>
    <string name="normal_user_notification">Normal User Notification</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="goods_cost">Goods Cost</string>
    <string name="enter_total_cost_of_goods">Enter Total Cost of Goods</string>
    <string name="invoice_image">Invoice Image</string>
    <string name="delivery_cost_vat">Delivery Cost + VAT</string>
</resources>