<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionBarBackgroundColor"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/back" />
        <com.mobu.jokar.view.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.mobu.jokar.view.RobotoBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_centerVertical="true"
                android:textColor="@color/blacklight"
                android:text="@string/normal_user_notification"/>
            <ToggleButton
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="41dp"
                android:layout_height="31dp"
                android:background="@drawable/bg_toggle_btn"
                android:checked="true"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <com.mobu.jokar.view.RobotoBoldTextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/blacklight"
            android:textSize="@dimen/text_size_medium"/>
        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <com.mobu.jokar.view.RobotoSemiBoldTextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/blacklight"
            android:textSize="@dimen/text_size_medium"/>
        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <com.mobu.jokar.view.RobotoSemiBoldTextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_and_condition"
            android:textColor="@color/blacklight"
            android:textSize="@dimen/text_size_medium"/>
        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>


        <com.mobu.jokar.view.RobotoSemiBoldTextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricy_policy"
            android:textColor="@color/blacklight"
            android:textSize="@dimen/text_size_medium"/>
        <View
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <com.mobu.jokar.view.RobotoBoldTextView
            android:id="@+id/tv_logout"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_medium"/>

    </LinearLayout>

</RelativeLayout>
