<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyWallet">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionBarBackgroundColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/back" />

            <com.mobu.jokar.view.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/my_wallet_passbook"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:weightSum="3">

        <com.mobu.jokar.view.RobotoRegularTextView
            android:id="@+id/wallet_normalUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_my_wallet_tab_corner"
            android:gravity="center"
            android:textSize="15sp"
            android:padding="@dimen/dp_15"
            android:text="@string/normal_user"
            android:textColor="@color/white" />

        <com.mobu.jokar.view.RobotoRegularTextView
            android:id="@+id/wallet_delivery_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_my_wallet_tab_corner"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/delivery_worker"
            android:textSize="15sp"/>

        <com.mobu.jokar.view.RobotoRegularTextView
            android:id="@+id/wallet_pro_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_my_wallet_tab_corner"
            android:gravity="center"
            android:padding="@dimen/dp_15"
            android:text="@string/pro_worker"
            android:textSize="15sp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_below="@+id/ll_main"
        android:layout_height="match_parent"/>


</RelativeLayout>