<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:visibility="gone"
    android:id="@+id/container_select_services"
    android:layout_marginLeft="@dimen/dp_25"
    android:layout_marginRight="@dimen/dp_25"
    android:layout_marginTop="@dimen/dp_90"
    android:layout_height="wrap_content">


    <com.mobu.jokar.view.RobotoRegularTextView
        android:id="@+id/tv_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/select_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mobu.jokar.view.RobotoRegularButton
        android:id="@+id/btn_derlivery_prsn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/sp_12"
        android:textAllCaps="false"
        android:background="@drawable/btn_map_back"
        android:text="@string/delivery_person"
        android:textColor="@color/purpalMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_prfsnal_worker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_service" />

    <com.mobu.jokar.view.RobotoRegularButton
        android:id="@+id/btn_prfsnal_worker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/sp_12"
        android:textAllCaps="false"
        android:background="@drawable/btn_map_back"
        android:text="@string/professional_worker"
        android:textColor="@color/purpalMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_derlivery_prsn" />
</android.support.constraint.ConstraintLayout>