<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TermsConditionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_150"
            android:contentDescription="jokar"
            android:padding="@dimen/dp_3"
            android:src="@drawable/logo" />


        <com.mobu.jokar.view.RobotoSemiBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/terms_conditions_and_privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <com.mobu.jokar.view.RobotoRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
            android:textSize="@dimen/text_size_regular" />

        <com.mobu.jokar.view.RobotoRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
            android:textSize="@dimen/text_size_regular" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:button="@drawable/selector_squre_checkbox" />

            <com.mobu.jokar.view.RobotoRegularTextView
                android:id="@+id/tv_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/i_accept"
                android:textColor="@color/blacklight"
                android:textSize="@dimen/text_size_regular" />

            <com.mobu.jokar.view.RobotoRegularTextView
                android:id="@+id/tv_terms_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_condition_and"
                android:textSize="@dimen/text_size_regular" />

            <com.mobu.jokar.view.RobotoRegularTextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="@dimen/text_size_regular" />


        </LinearLayout>


    </LinearLayout>

    </ScrollView>


    <com.mobu.jokar.view.RobotoRegularButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_35"
        android:layout_marginStart="@dimen/dp_35"
        android:background="@drawable/bg_sign_in"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium" />


</RelativeLayout>