<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionBarBackgroundColor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/close"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Invoice"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:layout_marginTop="@dimen/dp_15"
        android:layout_below="@+id/tool"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colortext"
            android:text="@string/goods_cost"/>

        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            android:textSize="@dimen/text_size_regular"
            android:paddingEnd="@dimen/dp_120"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_total_cost_of_goods"/>

        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/colortext"
            android:text="@string/invoice_image"/>


        <ImageView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_image"/>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_above="@+id/bt_send"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/goods_cost"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="0 SAR"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/delivery_cost_vat"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />
            <TextView
                android:layout_toStartOf="@+id/tv_text"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="15 SAR"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="15.15 SAR"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/total"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />


            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="0 SAR"
                android:textColor="@color/colortext"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_send"
        android:layout_alignParentBottom="true"
        android:text="Send"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpalMedium"/>
</RelativeLayout>
